// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should render correctly for default state 1`] = `
<RCTSafeAreaView>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 6,
          "paddingBottom": 4,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 4,
        },
        {
          "paddingLeft": 32,
          "paddingRight": 32,
        },
        undefined,
        {
          "backgroundColor": "#FFF9F6",
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
            "justifyContent": "flex-start",
            "width": "100%",
          }
        }
      />
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "flex-end",
          }
        }
      />
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Header should render correctly with PriceStats 1`] = `
<RCTSafeAreaView>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 6,
          "paddingBottom": 4,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 4,
        },
        {
          "paddingLeft": 32,
          "paddingRight": 32,
        },
        undefined,
        {
          "backgroundColor": "#FFF9F6",
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
            "justifyContent": "flex-start",
            "width": "100%",
          }
        }
      >
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 26,
                },
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 32,
                },
                {
                  "color": "#2B1911",
                },
                {
                  "flexShrink": 1,
                },
              ],
              false,
            ]
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          accessibilityHint="a mail icon"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
        <View
          accessibilityHint="a globe icon"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
    <View
      style={
        [
          {
            "backgroundColor": "#EAE3DF",
            "flexShrink": 1,
            "height": 1,
            "width": "100%",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        {
          "alignSelf": "stretch",
          "flexDirection": "row",
          "justifyContent": "space-between",
        }
      }
    >
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            },
            {
              "alignItems": "flex-start",
              "flexDirection": "column",
              "gap": 0,
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              {
                "fontFamily": "Baloo2-SemiBold",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 28,
              },
              false,
            ]
          }
        >
          1 BTC
        </Text>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#F56522",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
                {
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 28,
                },
              ],
              false,
            ]
          }
        >
          NaN
           
          EUR
        </Text>
      </View>
      <View
        style={
          [
            {
              "alignItems": "center",
              "flexDirection": "row",
              "gap": 8,
            },
            {
              "alignItems": "flex-start",
              "flexDirection": "column",
              "gap": 0,
            },
            {
              "alignItems": "flex-end",
            },
          ]
        }
      >
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-SemiBold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
                {
                  "textAlign": "right",
                },
              ],
              false,
            ]
          }
        >
          1 EUR
        </Text>
        <Text
          allowFontScaling={false}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "color": "#F56522",
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 28,
                },
                {
                  "fontFamily": "Baloo2-Regular",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 28,
                },
                {
                  "textAlign": "right",
                },
              ],
              false,
            ]
          }
        >
          NaN sats
        </Text>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`Header should render correctly with title and icons 1`] = `
<RCTSafeAreaView>
  <View
    style={
      [
        {
          "alignItems": "center",
          "gap": 6,
          "paddingBottom": 4,
          "paddingLeft": 16,
          "paddingRight": 16,
          "paddingTop": 4,
        },
        {
          "paddingLeft": 32,
          "paddingRight": 32,
        },
        [
          {
            "paddingLeft": 12,
          },
          {
            "paddingLeft": 22,
          },
        ],
        {
          "backgroundColor": "#FFF9F6",
        },
      ]
    }
  >
    <View
      style={
        {
          "flexDirection": "row",
          "justifyContent": "space-between",
          "width": "100%",
        }
      }
    >
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "flexShrink": 1,
            "gap": 4,
            "justifyContent": "flex-start",
            "width": "100%",
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
        >
          <test-file-stub
            fill="#7D675E"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
        <Text
          allowFontScaling={false}
          numberOfLines={1}
          style={
            [
              {
                "color": "#2B1911",
                "fontFamily": "Baloo2-Regular",
                "fontSize": 16,
                "letterSpacing": 0.16,
                "lineHeight": 24,
              },
              [
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 16,
                  "letterSpacing": 0.16,
                  "lineHeight": 26,
                },
                {
                  "fontFamily": "Baloo2-Bold",
                  "fontSize": 20,
                  "letterSpacing": 0.2,
                  "lineHeight": 32,
                },
                {
                  "color": "#2B1911",
                },
                {
                  "flexShrink": 1,
                },
              ],
              false,
            ]
          }
        >
          title
        </Text>
      </View>
      <View
        style={
          {
            "alignItems": "center",
            "flexDirection": "row",
            "gap": 10,
            "justifyContent": "flex-end",
          }
        }
      >
        <View
          accessibilityHint="a mail icon"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
        <View
          accessibilityHint="a globe icon"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
              "paddingBottom": 2,
              "paddingLeft": 2,
              "paddingRight": 2,
              "paddingTop": 2,
            }
          }
        >
          <test-file-stub
            fill="#888"
            style={
              [
                {
                  "height": 24,
                  "width": 24,
                },
                {
                  "height": 20,
                  "width": 20,
                },
                {
                  "height": 24,
                  "width": 24,
                },
              ]
            }
          />
        </View>
      </View>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`NewHeader should render correctly for default state 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,13 +13,10 @@
          Object {
            "paddingLeft": 32,
            "paddingRight": 32,
          },
          undefined,
-         Object {
-           "backgroundColor": "#FFF9F6",
-         },
        ]
      }
    >
      <View
        style={"
`;

exports[`NewHeader should render correctly with PriceStats 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -13,13 +13,10 @@
          Object {
            "paddingLeft": 32,
            "paddingRight": 32,
          },
          undefined,
-         Object {
-           "backgroundColor": "#FFF9F6",
-         },
        ]
      }
    >
      <View
        style={"
`;

exports[`NewHeader should render correctly with title and icons 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -12,14 +12,18 @@
          },
          Object {
            "paddingLeft": 32,
            "paddingRight": 32,
          },
-         undefined,
+         Array [
+           Object {
+             "marginLeft": -4,
+           },
            Object {
-           "backgroundColor": "#FFF9F6",
+             "marginLeft": -10,
            },
+         ],
        ]
      }
    >
      <View
        style={
@@ -37,13 +41,67 @@
              "flexDirection": "row",
              "flexShrink": 1,
              "gap": 4,
              "justifyContent": "flex-start",
              "width": "100%",
+           }
+         }
+       >
+         <View
+           accessibilityState={
+             Object {
+               "busy": undefined,
+               "checked": undefined,
+               "disabled": undefined,
+               "expanded": undefined,
+               "selected": undefined,
+             }
+           }
+           accessibilityValue={
+             Object {
+               "max": undefined,
+               "min": undefined,
+               "now": undefined,
+               "text": undefined,
+             }
+           }
+           accessible={true}
+           collapsable={false}
+           focusable={true}
+           onClick={[Function onClick]}
+           onResponderGrant={[Function onResponderGrant]}
+           onResponderMove={[Function onResponderMove]}
+           onResponderRelease={[Function onResponderRelease]}
+           onResponderTerminate={[Function onResponderTerminate]}
+           onResponderTerminationRequest={[Function onResponderTerminationRequest]}
+           onStartShouldSetResponder={[Function onStartShouldSetResponder]}
+           style={
+             Object {
+               "opacity": 1,
              }
            }
          >
+           <test-file-stub
+             fill="#7D675E"
+             style={
+               Array [
+                 Object {
+                   "height": 24,
+                   "width": 24,
+                 },
+                 Object {
+                   "height": 20,
+                   "width": 20,
+                 },
+                 Object {
+                   "height": 24,
+                   "width": 24,
+                 },
+               ]
+             }
+           />
+         </View>
          <Text
            allowFontScaling={false}
            numberOfLines={1}
            style={
              Array ["
`;
